2006-11-17  Michael Stucki  <michael@typo3.org>

	* Fixed bug #4059: options.hideRecords.pages doesn't work for mounted pages - Thanks to Marc Bastian Heinrichs for providing a fix!
 	* Fixed bug #4379: pageNotFound_handling ignores forceCharset setting
	* Fixed bug #3115: JavaScript error on clickmenu in filelist module
	* Fixed bug #4515: Input field with settings eval "date" and readOnly shows 01-01-1970 if the value is empty - Thanks to Marc Bastian Heinrichs for providing a fix!

2006-11-17  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Indexed Search: Added stdWrap around the search word in the output (tx_indexedsearch_pi[whatis]): tx_indexedsearch_pi.whatis_stdWrap
	* Indexed Search: Removed superfluos <P> tag around search word

2006-11-16  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Indexed Search: Added freeIndexSetId GROUP BY in tx_indexedsearch->execFinalQuery() to make SELECT work on DBs other than Mysql
	* Add an index prefix to Mysql key definitions when (var)chars are changed to text when multiplyDBfieldSize is set
	* Reverted change to key of sys_refindex on 2006-09-01 (key prefix is set now automatically)

2006-11-13  Bernhard Kraft  <kraftb@kraftb.at>

	* Fixed a bug: Normal labels rendered by class.db_list_extra.inc didn't get passed through t3lib_BEfunc::getProcessedValueExtra when alt_label fields are set.

2006-11-08  Dmitry Dulepov  <dmitry@typo3.org>

	* Enable creation of compact flexforms

2006-11-07  Michael Stucki  <michael@typo3.org>

	* Fixed bug #4348: Wrong time format in syslog output

2006-11-06  Michael Stucki  <michael@typo3.org>

	* Fix bug #3495: Endless recursion with some MySQL versions

2006-11-03  Michael Stucki  <michael@typo3.org>

	* Fixed bug #4425: Garble code in adodb extension
	* Fixed Cross Site Scripting issue in fe_adminLib.inc. For details, see http://typo3.org/teams/security/security-bulletins/typo3-20061010-1/ - thanks to Andriu Isenring Ritsch for discovering and reporting this issue.
